# specdiff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.specanopy/: config.yaml
.specanopy/behaviors/auth/: login.spec.md
.specanopy/contracts/api/: users.spec.md
examples/.specanopy/: hash-map.json
examples/.specanopy/behaviors/auth/: signup.spec.md
examples/.specanopy/skills/: architect.skill.md  implementation.skill.md  review.skill.md  spec-eval.skill.md  testing.skill.md
examples/cli-tool/.specanopy/: config.yaml
examples/cli-tool/.specanopy/behaviors/: convert.spec.md  validate.spec.md
examples/cli-tool/src/: cli.js  index.ts
examples/cli-tool/src/core/: converter.js  parser.js  type_detector.js  writer.js
examples/cli-tool/src/domain/: validator.ts
examples/cli-tool/src/errors/: error_handler.js
examples/cli-tool/src/parser/: csv_parser.ts
examples/cli-tool/src/stream/: csv_stream_transformer.ts
examples/cli-tool/src/tests/: converter.test.ts  csv_contract.test.ts
examples/cli-tool/src/types/: csv_schema.ts
examples/cli-tool/src/utils/: file_system.js
examples/cli-tool/src/validator/: csv_validator.ts
examples/data-pipeline/.specanopy/behaviors/: ingest.spec.md  load.spec.md
examples/data-pipeline/.specdiff/: config.yaml
examples/data-pipeline/.specdiff/behaviors/: transform.spec.md
examples/data-pipeline/src/: cli.js  index.ts
examples/data-pipeline/src/cli/: args.js  index.js
examples/data-pipeline/src/core/: file-processor.js  orchestrator.js  validator.js
examples/fullstack-todo/: package-lock.json  package.json  tsconfig.json
examples/fullstack-todo/.specanopy/: config.yaml
examples/rest-api/: package-lock.json  package.json
examples/rest-api/.specanopy/: hash-map.json
examples/rest-api/.specdiff/: config.yaml
examples/rest-api/src/domain/: user.ts  (+1 more)
examples/shared-skills/: architect.skill.md  implementation.skill.md  interface.skill.md  review.skill.md  spec-eval.skill.md  testing.skill.md
src/specanopy/: api.py  cli.py  extract.py  generator.py  graph.py  hashmap.py  parser.py  runner.py  skills.py  types.py
src/specanopy/agents/: architect.py  spec_agent.py  swarm.py
src/specanopy/ui_dist/: index.html
src/specdiff/: api.py  cli.py  extract.py  graph.py  hashmap.py  llm.py  parser.py  runner.py  skills.py  types.py
src/specdiff/agents/: architect.py  spec_agent.py  swarm.py
tests/: test_architect.py  test_cli.py  test_extract.py  test_graph.py  test_hashmap.py  test_llm.py  test_parser.py  test_runner.py  test_skills.py  test_spec_agent.py  test_swarm.py
ui/: package-lock.json  package.json
ui/src/: App.jsx  NodeDetails.jsx  SpecNode.jsx  index.css  layout.js
(+130 files in other folders)
