[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specanopy"
version = "0.1.0"
description = "Spec-driven code generation — the spec is the source of truth, code is a build artifact."
requires-python = ">=3.10"
dependencies = [
    "click",
    "python-frontmatter",
    "google-genai",
    "google-adk",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
specanopy = "specanopy.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
